gcc/testsuite/rust/rustc/ui/parser/removed-syntax-field-semicolon.rs
struct S {
    bar: ();
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

